k8s-manifests/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: retail
spec:
  selector:
    app: inventory
  ports:
    - port: 80
      targetPort: 5005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: drjabber/inventory-service:latest
          ports:
            - containerPort: 5005
          readinessProbe:
            httpGet:
              path: /health
              port: 5005
            initialDelaySeconds: 5
            periodSeconds: 10
