k8s-manifests/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: retail
spec:
  selector:
    app: order
  ports:
    - port: 80
      targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: moira121/order-service:latest
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 5
            periodSeconds: 10
