k8s-manifests/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: retail
spec:
  selector:
    app: recommendation
  ports:
    - port: 80
      targetPort: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-deployment
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - name: recommendation
          image: moira121/recommendation-service:latest
          ports:
            - containerPort: 5003
          readinessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 5
            periodSeconds: 10
